--- a/TrainingManager/TrainingManager.csproj
+++ b/TrainingManager/TrainingManager.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\TrainingManager.BLL\TrainingManager.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
 </Project>
